@@ -8,8 +8,6 @@ nobase_pkginclude_HEADERS =
 nobase_pkginclude_HEADERS += \
   Rivet.hh             Exceptions.hh \
   Event.hh             Run.hh \
-  RivetBoost.hh        RivetHepMC.hh \
-  RivetSTL.hh          RivetYODA.hh \
   ParticleBase.hh      Jet.hh \
   Particle.fhh         Particle.hh \
   ParticleName.hh      BeamConstraint.hh \
@@ -88,6 +86,10 @@ nobase_pkginclude_HEADERS += \
   Tools/Logging.hh  \
   Tools/Utils.hh \
   Tools/RivetPaths.hh \
+  Tools/RivetSTL.hh \
+  Tools/RivetBoost.hh \
+  Tools/RivetHepMC.hh \
+  Tools/RivetYODA.hh \
   Tools/BinnedHistogram.hh \
   Tools/ParticleIdUtils.hh \
   Tools/TypeTraits.hh \
