@@ -1,8 +1,8 @@
 #include "Rivet/Jet.hh"
 #include "Rivet/Tools/Logging.hh"
 #include "Rivet/Tools/ParticleIdUtils.hh"
+#include "Rivet/Tools/RivetBoost.hh"
 #include "Rivet/ParticleName.hh"
-#include "Rivet/RivetBoost.hh"
 
 namespace Rivet {
 
