@@ -1,5 +1,5 @@
 #include "Rivet/Particle.hh"
-#include "Rivet/RivetBoost.hh"
+#include "Rivet/Tools/RivetBoost.hh"
 #include "Rivet/Tools/ParticleIdUtils.hh"
 
 namespace Rivet {
