@@ -1,7 +1,7 @@
 #include "Rivet/Rivet.hh"
 #include "Rivet/Tools/RivetPaths.hh"
+#include "Rivet/Tools/RivetBoost.hh"
 #include "Rivet/Tools/Utils.hh"
-#include "Rivet/RivetBoost.hh"
 #include "binreloc.h"
 
 namespace Rivet {
