@@ -1,5 +1,5 @@
-#include "Rivet/RivetYODA.hh"
 #include "Rivet/Rivet.hh"
+#include "Rivet/Tools/RivetYODA.hh"
 #include "Rivet/Tools/RivetPaths.hh"
 #include "YODA/ReaderYODA.h"
 #include "YODA/ReaderAIDA.h"
