@@ -1,5 +1,7 @@
 2013-06-11  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Moving Rivet/RivetXXX.hh tools headers into Rivet/Tools/.
+
 	* Adding PrimaryHadrons projection.
 
 	* Adding particles_in/out functions on GenParticle to RivetHepMC.
